# VisionIreland_DUB14

./: .env.example  .gitignore  LICENSE  requirements.txt  test_file.txt  test_upload.py
Kiro_gen/backend/: .env.example  TEST_RESULTS.md  accessibility_audit.py  accessibility_audit_report.json  performance_optimization_report.json  performance_optimizer.py  pyproject.toml  run.py  security_audit_report.json  security_auditor.py  start.bat  start.ps1  test_api_live.py  test_aws_integration.py  test_backend_complete.py  test_demo.py  test_e2e_pipeline.py  test_pdf_extraction.py  test_phase5_basic.py  test_task32_completion.py
Kiro_gen/backend/comic_audio_narrator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Kiro_gen/backend/src/: __init__.py  aws_clients.py  config.py  main.py
Kiro_gen/backend/tests/: __init__.py  conftest.py  test_audio_description_property.py  test_batch_processing_property.py  test_batch_processing_unit.py  test_cache_manager_property.py  test_cache_manager_unit.py  test_character_description_nonrepetition_property.py  test_character_identification_unit.py  test_character_voice_consistency_property.py  test_library_indexing_property.py  test_library_indexing_unit.py  test_library_search_filter_property.py  test_local_storage_property.py  test_local_storage_unit.py  test_metadata_persistence_property.py  test_metadata_persistence_unit.py  test_pdf_extraction_property.py  test_pdf_extraction_unit.py  test_polly_audio_generation_property.py  test_polly_audio_generation_unit.py  test_s3_storage_property.py  test_s3_storage_unit.py  (+2 more)
(+221 files in other folders)
