[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comic-audio-narrator-backend"
version = "0.1.0"
description = "Backend service for Comic Audio Narrator - transforms comics to audio narratives"
requires-python = ">=3.11"
authors = [
    {name = "Comic Audio Narrator Team"}
]
dependencies = [
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "PyPDF2>=3.0.0",
    "PyMuPDF>=1.23.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "aiofiles>=23.0.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "hypothesis>=6.88.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
